--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,72 +3,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F0F4F8"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="match_parent"
+    <!-- App Title -->
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/button"
-        android:text="Take Picture"
-        android:backgroundTint="#4CAF50"
-        android:textAllCaps="false"
-        android:layout_above="@id/button2"
-        android:textSize="21sp"
+        android:text="@string/title"
+        android:textSize="22sp"
         android:textStyle="bold"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/button2"
-        android:backgroundTint="#4CAF50"
-        android:text="Launch Gallery"
-        android:textAllCaps="false"
-        android:layout_alignParentBottom="true"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        />
+        android:textColor="#333333"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"/>
 
+    <!-- Short description above Upload Image button -->
+    <TextView
+        android:id="@+id/uploadDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Description"
+        android:textSize="18sp"
+        android:textColor="#666666"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/titleText"
+        android:layout_centerHorizontal="true"/>
+
+    <!-- Image View for Uploaded Image -->
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="370dp"
-        android:layout_height="370dp"
+        android:layout_width="320dp"
+        android:layout_height="320dp"
+        android:layout_below="@id/uploadDescription"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:scaleType="fitCenter"/>
-<!--        android:src="@drawable/logo" />-->
+        android:layout_marginTop="15dp"
+        android:scaleType="fitCenter"
+        android:background="@drawable/imageview"
+        />
 
+    <!-- Upload Image Button -->
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button"
+        android:text="Upload Image"
+        android:textAllCaps="false"
+        android:textSize="18sp"
+        android:textColor="#FFFFFF"/>
 
+    <!-- Classification Result -->
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Classified as:"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:id="@+id/classified"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="10sp"
-        />
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:text=""
-        android:textColor="#C30000"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textSize="27sp"
+        android:textColor="#333333"
+        android:layout_below="@id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
         android:id="@+id/result"
-        android:layout_below="@+id/classified"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#444444"
+        android:textStyle="bold"
+        android:textSize="22sp"
+        android:layout_below="@id/classified"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"/>
+
+    <!-- Short Description -->
+    <TextView
+        android:id="@+id/resultDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#888888"
+        android:textSize="16sp"
+        android:layout_below="@id/result"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"/>
 
 </RelativeLayout>
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--    android:orientation="vertical"-->
-    <!--    android:layout_width="match_parent"-->
-    <!--    android:layout_height="match_parent">-->
-
-    <!--</LinearLayout>-->
